--- a/index.html
+++ b/index.html
@@ -4,81 +4,241 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Ruthika Thorat | Data Analyst Portfolio</title>
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
+  <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
   <style>
     body {
+      font-family: 'Poppins', sans-serif;
+      background-color: #f0e9ff;
+      color: #2d2d2d;
       margin: 0;
-      font-family: 'Segoe UI', sans-serif;
-      background-color: #e6e6fa; /* Soft lilac */
-      color: #333;
+      padding: 0;
+      scroll-behavior: smooth;
     }
-    .home {
+
+    header {
+      background-color: #cdb7f0;
+      padding: 2.5rem 1rem;
+      border-radius: 0 0 30px 30px;
       text-align: center;
-      padding: 100px 20px;
     }
-    .home h1 {
-      font-size: 3em;
-      margin-bottom: 10px;
-      color: #4b0082; /* Deep purple */
+
+    h1 {
+      font-size: 2.5rem;
+      margin: 0.5rem 0;
     }
-    .home h2 {
-      font-size: 1.5em;
-      font-weight: normal;
-      color: #5e5e5e;
+
+    h2 {
+      font-size: 1.4rem;
+      font-weight: 500;
+      color: #4c1d95;
+      margin-bottom: 1rem;
     }
-    .home p {
-      max-width: 600px;
-      margin: 20px auto;
-      font-size: 1.1em;
+
+    p {
+      font-size: 1.05rem;
+      margin: 0 1rem 1.5rem;
     }
-    .buttons {
-      margin-top: 30px;
-    }
-    .buttons a {
-      text-decoration: none;
-      margin: 10px;
-      padding: 12px 24px;
-      background-color: #6a5acd;
-      color: white;
-      border-radius: 30px;
-      font-weight: bold;
-      transition: background-color 0.3s;
-    }
-    .buttons a:hover {
-      background-color: #483d8b;
-    }
-    .socials {
-      margin-top: 40px;
-    }
-    .socials a {
-      margin: 0 10px;
-      font-size: 1.5em;
-      color: #4b0082;
-      text-decoration: none;
-    }
+
     .profile-img {
       width: 180px;
+      height: 180px;
       border-radius: 50%;
-      margin-bottom: 30px;
+      margin-top: 1rem;
+      border: 4px solid white;
+      box-shadow: 0 4px 15px rgba(0,0,0,0.1);
     }
+
+    .buttons, .socials {
+      margin: 1rem 0;
+    }
+
+    .buttons a, .socials a {
+      display: inline-block;
+      margin: 0.5rem 0.75rem;
+      padding: 0.7rem 1.5rem;
+      background-color: #7c3aed;
+      color: white;
+      text-decoration: none;
+      border-radius: 25px;
+      font-weight: 600;
+      transition: background 0.3s ease;
+    }
+
+    .buttons a:hover, .socials a:hover {
+      background-color: #5b21b6;
+    }
+
+    section {
+      padding: 3rem 1rem;
+      background-color: #faf5ff;
+    }
+
+    h3 {
+      color: #5b21b6;
+      font-size: 1.8rem;
+      margin-bottom: 1rem;
+      text-align: center;
+    }
+
+    .card {
+      max-width: 800px;
+      margin: 1.5rem auto;
+      background: #fff;
+      border-radius: 15px;
+      box-shadow: 0 0 10px rgba(0,0,0,0.05);
+      padding: 1.5rem;
+      text-align: left;
+    }
+
+    .card h4 {
+      margin-bottom: 0.5rem;
+      color: #4c1d95;
+    }
+
+    .card p {
+      font-size: 0.95rem;
+      color: #555;
+    }
+
+    .contact-info {
+      text-align: center;
+      font-size: 1.1rem;
+      color: #444;
+    }
+
+    footer {
+      background-color: #e9d8fd;
+      padding: 1rem;
+      font-size: 0.9rem;
+      color: #555;
+      margin-top: 2rem;
+    }
+    .top-button {
+  position: fixed;
+  bottom: 20px;
+  right: 20px;
+  background-color: #7c3aed;
+  color: white;
+  padding: 10px 15px;
+  border-radius: 50%;
+  font-size: 20px;
+  text-align: center;
+  text-decoration: none;
+  box-shadow: 0 2px 10px rgba(0,0,0,0.2);
+  transition: background 0.3s ease;
+  z-index: 999;
+}
+.top-button:hover {
+  background-color: #5b21b6;
+}
+@media (max-width: 768px) {
+  header, section {
+    padding: 2rem 1rem;
+  }
+
+  .profile-img {
+    width: 140px;
+    height: 140px;
+  }
+
+  h1 {
+    font-size: 2rem;
+  }
+
+  h2 {
+    font-size: 1.2rem;
+  }
+
+  .buttons a, .socials a {
+    display: block;
+    margin: 0.5rem auto;
+    width: 80%;
+  }
+
+  .card {
+    margin: 1rem 0.5rem;
+    padding: 1rem;
+  }
+}
   </style>
 </head>
 <body>
-  <section class="home">
-   <img src="avatar.png" alt="Profile" class="profile-img" />
+
+  <!-- Hero Section -->
+  <header data-aos="fade-down">
+    <img src="avatar.png" alt="Profile Picture" class="profile-img" />
     <h1>Ruthika Thorat</h1>
     <h2>Aspiring Data Analyst | Google Certified</h2>
     <p>Turning data into meaningful insights. Passionate about solving real-world problems using Excel, SQL, and Python.</p>
 
     <div class="buttons">
-      <a href="#projects">View Projects</a>
-      <a href="resume.pdf" download>Download Resume</a>
+      <a href="#projects">📁 View Projects</a>
+      <a href="Ruthika_Thorat_Resume.pdf" download>📄 Download Resume</a>
     </div>
 
     <div class="socials">
       <a href="https://linkedin.com/in/ruthika-thorat-4059531a0" target="_blank">🔗 LinkedIn</a>
-      <a href="https://github.com/YOUR_GITHUB_USERNAME" target="_blank">💻 GitHub</a>
+      <a href="https://github.com/ruthika619" target="_blank">💻 GitHub</a>
+    </div>
+  </header>
+
+  <!-- Projects Section -->
+  <section id="projects" data-aos="fade-up">
+    <h3>Projects</h3>
+
+    <div class="card">
+      <h4>📊 Bank Marketing Campaign Analysis</h4>
+      <p>Analyzed customer data from a bank's telemarketing campaign using Excel. Created pivot tables, charts, and dashboards to identify customer segments and optimize targeting strategy.</p>
+    </div>
+
+    <div class="card">
+      <h4>🏢 Dubai Real Estate Market Analysis</h4>
+      <p>Used Python and Pandas to explore and visualize real estate trends in Dubai. Presented insights on price distribution, property types, and location impact.</p>
+    </div>
+
+    <div class="card">
+      <h4>🛒 E-commerce Sales Dashboard</h4>
+      <p>Built an interactive sales dashboard in Excel for an e-commerce store to track revenue, best-selling products, and monthly performance.</p>
     </div>
   </section>
+
+  <!-- Certifications Section -->
+  <section id="certifications" data-aos="fade-up">
+    <h3>Certifications</h3>
+
+    <div class="card">
+      <h4>📚 Google Data Analytics Professional Certificate</h4>
+      <p>Coursera – Completed comprehensive coursework in data cleaning, visualization, SQL, R programming, and case studies.</p>
+    </div>
+
+    <div class="card">
+      <h4>📄 Postgraduate Diploma in Banking & Finance</h4>
+      <p>IFBI – Gained foundational knowledge in financial services and customer relationship management.</p>
+    </div>
+  </section>
+
+  <!-- Contact Info -->
+  <section id="contact" data-aos="fade-up">
+    <h3>Contact Me</h3>
+    <p class="contact-info">
+      📧 Email: ruthikasthorat2001@gmail.com<br>
+      📍 Location: Dubai, UAE
+    </p>
+  </section>
+
+  <footer>
+    © 2025 Ruthika Thorat · All Rights Reserved
+  </footer>
+
+  <!-- Scroll Animation JS -->
+  <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+  <script>
+    AOS.init({
+      duration: 1000,
+      once: true,
+    });
+  </script>
+  <a href="#" class="top-button" title="Back to Top">↑</a>
 </body>
 </html>
-
