--- a/index.html
+++ b/index.html
@@ -101,6 +101,13 @@
       color: #555;
     }
 
+    .card img {
+      width: 100%;
+      max-width: 750px;
+      border-radius: 10px;
+      margin: 10px 0;
+    }
+
     .contact-info {
       text-align: center;
       font-size: 1.1rem;
@@ -114,58 +121,58 @@
       color: #555;
       margin-top: 2rem;
     }
+
     .top-button {
-  position: fixed;
-  bottom: 20px;
-  right: 20px;
-  background-color: #7c3aed;
-  color: white;
-  padding: 10px 15px;
-  border-radius: 50%;
-  font-size: 20px;
-  text-align: center;
-  text-decoration: none;
-  box-shadow: 0 2px 10px rgba(0,0,0,0.2);
-  transition: background 0.3s ease;
-  z-index: 999;
-}
-.top-button:hover {
-  background-color: #5b21b6;
-}
-@media (max-width: 768px) {
-  header, section {
-    padding: 2rem 1rem;
-  }
+      position: fixed;
+      bottom: 20px;
+      right: 20px;
+      background-color: #7c3aed;
+      color: white;
+      padding: 10px 15px;
+      border-radius: 50%;
+      font-size: 20px;
+      text-align: center;
+      text-decoration: none;
+      box-shadow: 0 2px 10px rgba(0,0,0,0.2);
+      transition: background 0.3s ease;
+      z-index: 999;
+    }
+    .top-button:hover {
+      background-color: #5b21b6;
+    }
 
-  .profile-img {
-    width: 140px;
-    height: 140px;
-  }
+    @media (max-width: 768px) {
+      header, section {
+        padding: 2rem 1rem;
+      }
 
-  h1 {
-    font-size: 2rem;
-  }
+      .profile-img {
+        width: 140px;
+        height: 140px;
+      }
 
-  h2 {
-    font-size: 1.2rem;
-  }
+      h1 {
+        font-size: 2rem;
+      }
 
-  .buttons a, .socials a {
-    display: block;
-    margin: 0.5rem auto;
-    width: 80%;
-  }
+      h2 {
+        font-size: 1.2rem;
+      }
 
-  .card {
-    margin: 1rem 0.5rem;
-    padding: 1rem;
-  }
-}
+      .buttons a, .socials a {
+        display: block;
+        margin: 0.5rem auto;
+        width: 80%;
+      }
+
+      .card {
+        margin: 1rem 0.5rem;
+        padding: 1rem;
+      }
+    }
   </style>
 </head>
 <body>
-
-  <!-- Hero Section -->
   <header data-aos="fade-down">
     <img src="avatar.png" alt="Profile Picture" class="profile-img" />
     <h1>Ruthika Thorat</h1>
@@ -174,55 +181,49 @@
 
     <div class="buttons">
       <a href="#projects">📁 View Projects</a>
-      <a href="Ruthika_Thorat_Resume.pdf" download>📄 Download Resume</a>
+      <a href="Ruthika_Thorat_Resume_v2.pdf" download>📄 Download Resume</a>
     </div>
 
     <div class="socials">
       <a href="https://linkedin.com/in/ruthika-thorat-4059531a0" target="_blank">🔗 LinkedIn</a>
-      <a href="https://github.com/ruthika619" target="_blank">💻 GitHub</a>
+    <!-- <a href="https://github.com/ruthika619" target="_blank">💻 GitHub</a> -->
+
     </div>
   </header>
 
-  <!-- Projects Section -->
   <section id="projects" data-aos="fade-up">
     <h3>Projects</h3>
 
     <div class="card">
-      <h4>📊 Bank Marketing Campaign Analysis</h4>
-      <p>Analyzed customer data from a bank's telemarketing campaign using Excel. Created pivot tables, charts, and dashboards to identify customer segments and optimize targeting strategy.</p>
+      <h4>🛡 Cyclistic Bike Share Dashboard</h4>
+      <p>Developed a dashboard to visualize cybersecurity risk metrics and trends using Power BI.</p>
+      <img src="cycyistic-dashboard.png" alt="Cyclistic Bike Share Dashboard">
     </div>
 
     <div class="card">
-      <h4>🏢 Dubai Real Estate Market Analysis</h4>
-      <p>Used Python and Pandas to explore and visualize real estate trends in Dubai. Presented insights on price distribution, property types, and location impact.</p>
-    </div>
-
-    <div class="card">
-      <h4>🛒 E-commerce Sales Dashboard</h4>
-      <p>Built an interactive sales dashboard in Excel for an e-commerce store to track revenue, best-selling products, and monthly performance.</p>
+      <h4>💰 UAE Government Pricing Dashboard</h4>
+      <p>Analyzed and visualized government service pricing patterns, highlighting high-cost areas and collection frequency.</p>
+      <img src="uae-pricing.png" alt="UAE Government Pricing Dashboard">
     </div>
   </section>
 
-  <!-- Certifications Section -->
   <section id="certifications" data-aos="fade-up">
     <h3>Certifications</h3>
-
     <div class="card">
       <h4>📚 Google Data Analytics Professional Certificate</h4>
       <p>Coursera – Completed comprehensive coursework in data cleaning, visualization, SQL, R programming, and case studies.</p>
+       <img src="Google_Data_Analytics.png">
     </div>
-
     <div class="card">
       <h4>📄 Postgraduate Diploma in Banking & Finance</h4>
       <p>IFBI – Gained foundational knowledge in financial services and customer relationship management.</p>
     </div>
   </section>
 
-  <!-- Contact Info -->
   <section id="contact" data-aos="fade-up">
     <h3>Contact Me</h3>
     <p class="contact-info">
-      📧 Email: ruthikasthorat2001@gmail.com<br>
+      📧 Email: ruthika1433@gmail.com<br>
       📍 Location: Dubai, UAE
     </p>
   </section>
@@ -231,14 +232,11 @@
     © 2025 Ruthika Thorat · All Rights Reserved
   </footer>
 
-  <!-- Scroll Animation JS -->
   <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
   <script>
-    AOS.init({
-      duration: 1000,
-      once: true,
-    });
+    AOS.init({ duration: 1000, once: true });
   </script>
+
   <a href="#" class="top-button" title="Back to Top">↑</a>
 </body>
 </html>
