--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
 
     <div class="socials">
       <a href="https://linkedin.com/in/ruthika-thorat-4059531a0" target="_blank">🔗 LinkedIn</a>
-    <!-- <a href="https://github.com/ruthika619" target="_blank">💻 GitHub</a> -->
+      <a href="https://github.com/ruthika619" target="_blank">💻 GitHub</a>
 
     </div>
   </header>
