--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
 
     <div class="socials">
       <a href="https://linkedin.com/in/ruthika-thorat-4059531a0" target="_blank">🔗 LinkedIn</a>
-      <a href="https://github.com/ruthika619" target="_blank">💻 GitHub</a>
+   <a href="https://github.com/ruthika619" target="_blank">💻 GitHub</a>
 
     </div>
   </header>
@@ -196,7 +196,7 @@
 
     <div class="card">
       <h4>🛡 Cyclistic Bike Share Dashboard</h4>
-      <p>Developed a dashboard to visualize cybersecurity risk metrics and trends using Power BI.</p>
+      <p>Analyzed 5M+ bike share trip records using Excel. Visualized trends by user type, ride duration, and weekday usage.</p>
       <img src="cycyistic-dashboard.png" alt="Cyclistic Bike Share Dashboard">
     </div>
 
@@ -212,13 +212,31 @@
     <div class="card">
       <h4>📚 Google Data Analytics Professional Certificate</h4>
       <p>Coursera – Completed comprehensive coursework in data cleaning, visualization, SQL, R programming, and case studies.</p>
-       <img src="Google_Data_Analytics.png">
+       <a href="https://coursera.org/share/YOUR-CERTIFICATE-ID" target="_blank">
+  <img src="Google_Data_Analytics.png" alt="Google Data Analytics Certificate" style="max-width:100%; border-radius:10px;">
+</a>
+
     </div>
     <div class="card">
       <h4>📄 Postgraduate Diploma in Banking & Finance</h4>
       <p>IFBI – Gained foundational knowledge in financial services and customer relationship management.</p>
     </div>
   </section>
+  
+  <section id="skills" data-aos="fade-up">
+  <h3>Skills</h3>
+  <div class="card">
+    <p>
+      📊 Power BI (Dashboards, DAX, Data Modeling)<br>
+      📈 Excel (Pivot Tables, Charts, VLOOKUP)<br>
+      🧹 Data Cleaning & Analysis<br>
+      🏦 Financial Analysis & Reporting<br>
+      🧾 Tally ERP9 (Basic), QuickBooks<br>
+      💡 Banking & Customer Relationship Knowledge
+    </p>
+  </div>
+</section>
+
 
   <section id="contact" data-aos="fade-up">
     <h3>Contact Me</h3>
