--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
   <h3>Skills</h3>
   <div class="card">
     <p>
-      📊 Power BI (Dashboards, DAX, Data Modeling)<br>
+      📊 Power BI (Dashboards, Data Modeling)<br>
       📈 Excel (Pivot Tables, Charts, VLOOKUP)<br>
       🧹 Data Cleaning & Analysis<br>
       🏦 Financial Analysis & Reporting<br>
