--- a/index.html
+++ b/index.html
@@ -176,8 +176,8 @@
   <header data-aos="fade-down">
     <img src="avatar.png" alt="Profile Picture" class="profile-img" />
     <h1>Ruthika Thorat</h1>
-    <h2>Aspiring Data Analyst | Google Certified</h2>
-    <p>Turning data into meaningful insights. Passionate about solving real-world problems using Excel, SQL, and Python.</p>
+<h2>Accounting Analyst | Certified Accounting Professional | Data-Driven Decision Maker</h2>
+<p>Combining accounting principles with modern analytics tools like Excel and Power BI to enhance financial accuracy, reporting, and insights. Focused on supporting strategic business decisions through data.</p>
 
     <div class="buttons">
       <a href="#projects">📁 View Projects</a>
