--- a/index.html
+++ b/index.html
@@ -174,14 +174,14 @@
 </head>
 <body>
   <header data-aos="fade-down">
-    <img src="avatar.png" alt="Profile Picture" class="profile-img" />
+    <img src="images/avatar.png" alt="Profile Picture" class="profile-img" />
     <h1>Ruthika Thorat</h1>
 <h2>Accounting Analyst | Certified Accounting Professional | Data-Driven Decision Maker</h2>
 <p>Combining accounting principles with modern analytics tools like Excel and Power BI to enhance financial accuracy, reporting, and insights. Focused on supporting strategic business decisions through data.</p>
 
     <div class="buttons">
       <a href="#projects">📁 View Projects</a>
-      <a href="Ruthika_Thorat_Resume_v2.pdf" download>📄 Download Resume</a>
+     <a href="documents/Ruthika_Thorat_Resume_v2.pdf" download>📄 Download Resume</a>
     </div>
 
     <div class="socials">
@@ -197,19 +197,21 @@
     <div class="card">
       <h4>🛡 Cyclistic Bike Share Dashboard</h4>
       <p>Analyzed 5M+ bike share trip records using Excel. Visualized trends by user type, ride duration, and weekday usage.</p>
-      <img src="cycyistic-dashboard.png" alt="Cyclistic Bike Share Dashboard">
+     <img src="images/cycyistic-dashboard.png" alt="Cyclistic Bike Share Dashboard">
     </div>
 
      <h4>📊 Excel Doers Ltd – Guided Accounting System</h4>
         <p>Built a full accounting system in Excel including Journal Entries, Balance Sheet, and Cash Flow Statement. This project was completed by following a guided tutorial to understand Excel automation in accounting.</p>
         <a href="excel-doers.html" target="_blank" style="display:inline-block; padding:0.6rem 1.2rem; background-color:#7c3aed; color:#fff; border-radius:20px; text-decoration:none; font-weight:600;">📸 View Project Screenshots</a>
-         <img src="cashflowstatement.png">  
+         <img src="images/cashflowstatement.png" alt="Cash Flow Statement">
+ 
   </div>
 
     <div class="card">
       <h4>💰 UAE Government Pricing Dashboard</h4>
       <p>Analyzed and visualized government service pricing patterns, highlighting high-cost areas and collection frequency.</p>
-      <img src="uae-pricing.png" alt="UAE Government Pricing Dashboard">
+      <img src="images/uae-pricing.png" alt="UAE Government Pricing Dashboard">
+
     </div>
     <div class="card">
  
@@ -220,8 +222,8 @@
     <div class="card">
       <h4>📚 Google Data Analytics Professional Certificate</h4>
       <p>Coursera – Completed comprehensive coursework in data cleaning, visualization, SQL, R programming, and case studies.</p>
-       <a href="https://coursera.org/share/YOUR-CERTIFICATE-ID" target="_blank">
-  <img src="Google_Data_Analytics.png" alt="Google Data Analytics Certificate" style="max-width:100%; border-radius:10px;">
+      <a href="https://coursera.org/share/63c5d2f0874a96555b9003c71dd89234" target="_blank">
+  <img src="certificates/Google_Data_Analytics.png" alt="Google Data Analytics Certificate" style="max-width:100%; border-radius:10px;">
 </a>
 
     </div>
