--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Ruthika Thorat | Data Analyst Portfolio</title>
+  <title>Ruthika Thorat | Accounting & Data Insights for the Future</title>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
   <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
   <style>
@@ -175,9 +175,10 @@
 <body>
   <header data-aos="fade-down">
     <img src="images/avatar.png" alt="Profile Picture" class="profile-img" />
-    <h1>Ruthika Thorat</h1>
-<h2>Accounting Analyst | Certified Accounting Professional | Data-Driven Decision Maker</h2>
-<p>Combining accounting principles with modern analytics tools like Excel and Power BI to enhance financial accuracy, reporting, and insights. Focused on supporting strategic business decisions through data.</p>
+    <h1><h1>Ruthika Thorat</h1>
+<h2>Aspiring Accountant | Excel & VAT Reporting | UAE-based</h2>
+<p>Dedicated to building clean, accurate accounting records, with expertise in Excel, journal entries, VAT reporting, and financial statements. Skilled in using Power BI for financial data analysis and insights. Currently preparing for the ACCA qualification and pursuing a career in accounting and bookkeeping in the UAE.
+</p>
 
     <div class="buttons">
       <a href="#projects">📁 View Projects</a>
@@ -193,32 +194,34 @@
 
   <section id="projects" data-aos="fade-up">
     <h3>Projects</h3>
-
-    <div class="card">
-      <h4>🛡 Cyclistic Bike Share Dashboard</h4>
-      <p>Analyzed 5M+ bike share trip records using Excel. Visualized trends by user type, ride duration, and weekday usage.</p>
-     <img src="images/cycyistic-dashboard.png" alt="Cyclistic Bike Share Dashboard">
-    </div>
-
+ <div class="card">
      <h4>📊 Excel Doers Ltd – Guided Accounting System</h4>
         <p>Built a full accounting system in Excel including Journal Entries, Balance Sheet, and Cash Flow Statement. This project was completed by following a guided tutorial to understand Excel automation in accounting.</p>
         <a href="excel-doers.html" target="_blank" style="display:inline-block; padding:0.6rem 1.2rem; background-color:#7c3aed; color:#fff; border-radius:20px; text-decoration:none; font-weight:600;">📸 View Project Screenshots</a>
          <img src="images/cashflowstatement.png" alt="Cash Flow Statement">
- 
-  </div>
-
-    <div class="card">
+ </div>
+ <div class="card">
       <h4>💰 UAE Government Pricing Dashboard</h4>
       <p>Analyzed and visualized government service pricing patterns, highlighting high-cost areas and collection frequency.</p>
       <img src="images/uae-pricing.png" alt="UAE Government Pricing Dashboard">
 
-    </div>
-    <div class="card">
+ </div>
+    
+ <div class="card">
+      <h4>🛡 Cyclistic Bike Share Dashboard</h4>
+      <p>Analyzed 5M+ bike share trip records using Excel. Visualized trends by user type, ride duration, and weekday usage.</p>
+     <img src="images/cycyistic-dashboard.png" alt="Cyclistic Bike Share Dashboard">
+ </div>
  
   </section>
 
   <section id="certifications" data-aos="fade-up">
-    <h3>Certifications</h3>
+    <h3>Certifications</h3
+    <div class="card">
+      <h4>📄 Postgraduate Diploma in Banking & Finance</h4>
+      <p>IFBI – Gained foundational knowledge in financial services and customer relationship management.</p>
+    </div> 
+    
     <div class="card">
       <h4>📚 Google Data Analytics Professional Certificate</h4>
       <p>Coursera – Completed comprehensive coursework in data cleaning, visualization, SQL, R programming, and case studies.</p>
@@ -227,10 +230,7 @@
 </a>
 
     </div>
-    <div class="card">
-      <h4>📄 Postgraduate Diploma in Banking & Finance</h4>
-      <p>IFBI – Gained foundational knowledge in financial services and customer relationship management.</p>
-    </div>
+  
   </section>
   
   <section id="skills" data-aos="fade-up">
