--- a/index.html
+++ b/index.html
@@ -215,22 +215,21 @@
   </section>
 
   <section id="certifications" data-aos="fade-up">
-    <h3>Certifications</h3
+    <h3>Certifications</h3> <!-- Added missing closing tag -->
     <div class="card">
-      <h4>📄 Postgraduate Diploma in Banking & Finance</h4>
-      <p>IFBI – Gained foundational knowledge in financial services and customer relationship management.</p>
+        <h4>📄 Postgraduate Diploma in Banking & Finance</h4>
+        <p>IFBI – Gained foundational knowledge in financial services and customer relationship management.</p>
     </div> 
     
     <div class="card">
-      <h4>📚 Google Data Analytics Professional Certificate</h4>
-      <p>Coursera – Completed comprehensive coursework in data cleaning, visualization, SQL, R programming, and case studies.</p>
-      <a href="https://coursera.org/share/63c5d2f0874a96555b9003c71dd89234" target="_blank">
-  <img src="certificates/Google_Data_Analytics.png" alt="Google Data Analytics Certificate" style="max-width:100%; border-radius:10px;">
-</a>
-
+        <h4>📚 Google Data Analytics Professional Certificate</h4>
+        <p>Coursera – Completed comprehensive coursework in data cleaning, visualization, SQL, R programming, and case studies.</p>
+        <a href="https://coursera.org/share/63c5d2f0874a96555b9003c71dd89234" target="_blank">
+            <img src="images/Google_Data_Analytics.png" alt="Google Data Analytics Certificate" style="max-width:100%; border-radius:10px;">
+        </a>
     </div>
-  
   </section>
+
   
   <section id="skills" data-aos="fade-up">
   <h3>Skills</h3>
