--- a/excel-doers.html
+++ b/excel-doers.html
@@ -42,11 +42,11 @@
   <a class="back" href="index.html">&larr; Back to Portfolio</a>
   <h1>Excel Doers Ltd – Project Screenshots</h1>
 
-     <img src="generalentries.png">
-     <img src="ledger.png">
-     <img src="trailbalance.png">
-     <img src="incomestatement.png">
-    <img src="balancesheet.png">
-    <img src="cashflowstatement.png">
+     <img src="images/generalentries.png">
+     <img src="images/ledger.png">
+     <img src="images/trailbalance.png">
+     <img src="images/incomestatement.png">
+    <img src="images/balancesheet.png">
+    <img src="images/cashflowstatement.png">
 </body>
 </html>
