--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
 
     <div class="buttons">
       <a href="#projects">📁 View Projects</a>
-     <a href="documents/Ruthika_Thorat_Resume_v2.pdf" download>📄 Download Resume</a>
+     <a href="documents/Ruthika Thorat - Accountant.pdf" download>📄 Download Resume</a>
     </div>
 
     <div class="socials">
