--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
 <body>
   <header data-aos="fade-down">
     <img src="images/avatar.png" alt="Profile Picture" class="profile-img" />
-    <h1><h1>Ruthika Thorat</h1>
+    <h1>Ruthika Thorat</h1>
 <h2>Aspiring Accountant | Excel & VAT Reporting | UAE-based</h2>
 <p>Dedicated to building clean, accurate accounting records, with expertise in Excel, journal entries, VAT reporting, and financial statements. Skilled in using Power BI for financial data analysis and insights. Currently preparing for the ACCA qualification and pursuing a career in accounting and bookkeeping in the UAE.
 </p>
@@ -186,7 +186,7 @@
     </div>
 
     <div class="socials">
-      <a href="https://linkedin.com/in/ruthika-thorat-4059531a0" target="_blank">🔗 LinkedIn</a>
+      <a href="https://www.linkedin.com/in/ruthika-thorat-b1549a375" target="_blank">🔗 LinkedIn</a>
    <a href="https://github.com/ruthika619" target="_blank">💻 GitHub</a>
 
     </div>
@@ -194,6 +194,41 @@
 
   <section id="projects" data-aos="fade-up">
     <h3>Projects</h3>
+    ## 📂 Featured Projects
+
+### 📘 [QuickBooks Full-Year Accounting Simulation (UAE VAT)](https://github.com/ruthika619/quickbooks-accounting-simulation)
+Simulated 12 months of business transactions for a UAE-based trading company in QuickBooks, including VAT filings, payroll, and full financial statements.  
+![Repo size](https://img.shields.io/github/repo-size/ruthika619/quickbooks-accounting-simulation)
+![Stars](https://img.shields.io/github/stars/ruthika619/quickbooks-accounting-simulation?style=social)
+
+---
+
+### 🧾 [Excel Accounting System – DesertGadget Simulation](https://github.com/ruthika619/excel-accounting-simulation)
+Built a full accounting cycle in Excel: journal entries, ledgers, trial balance, income statement, balance sheet, and cash flow. Automated using Power Query.  
+![Repo size](https://img.shields.io/github/repo-size/ruthika619/excel-accounting-simulation)
+![Stars](https://img.shields.io/github/stars/ruthika619/excel-accounting-simulation?style=social)
+
+---
+
+### 💰 [UAE Government Pricing Analysis](https://github.com/ruthika619/uae-government-pricing-analysis)
+Analyzed government service pricing trends and visualized cost clusters using Power BI.  
+![Repo size](https://img.shields.io/github/repo-size/ruthika619/uae-government-pricing-analysis)
+![Stars](https://img.shields.io/github/stars/ruthika619/uae-government-pricing-analysis?style=social)
+
+---
+
+### 🚲 [Cyclistic Case Study (Google Capstone)](https://github.com/ruthika619/cyclistic-case-study)
+Cleaned and explored 5M+ bike ride records to uncover rider trends using Excel.  
+![Repo size](https://img.shields.io/github/repo-size/ruthika619/cyclistic-case-study)
+![Stars](https://img.shields.io/github/stars/ruthika619/cyclistic-case-study?style=social)
+
+    <div class="card">
+   <h4>📘 QuickBooks Full-Year Accounting Simulation (UAE VAT)</h4>
+    
+   <p>Simulated 12 months of business transactions for a UAE-based company in QuickBooks, including VAT filings, financial statements, and compliance reports.</p>
+   <img src="images/quickbooks-dashboard.png" alt="QuickBooks Accounting Simulation">
+</div>
+
  <div class="card">
      <h4>📊 Excel Doers Ltd – Guided Accounting System</h4>
         <p>Built a full accounting system in Excel including Journal Entries, Balance Sheet, and Cash Flow Statement. This project was completed by following a guided tutorial to understand Excel automation in accounting.</p>
@@ -237,13 +272,13 @@
   <h3>Skills</h3>
   <div class="card">
     <p>
-      📊 Power BI (Dashboards, Data Modeling)<br>
-      📈 Excel (Pivot Tables, Charts, VLOOKUP)<br>
-      🧹 Data Cleaning & Analysis<br>
-      🏦 Financial Analysis & Reporting<br>
-      🧾 Tally ERP9 (Basic), QuickBooks<br>
-      💡 Banking & Customer Relationship Knowledge
-    </p>
+     🧾 QuickBooks (Intermediate), Tally ERP9 (Basic)  
+     📈 Excel (Pivot Tables, Charts, VLOOKUP)  
+     📊 Power BI (Dashboards, Data Modeling)  
+     🏦 Financial Analysis & Reporting  
+    🧹 Data Cleaning & Analysis  
+    💡 Banking & Customer Relationship Knowledge  
+
   </div>
 </section>
 
@@ -268,3 +303,4 @@
   <a href="#" class="top-button" title="Back to Top">↑</a>
 </body>
 </html>
+
