--- a/index.html
+++ b/index.html
@@ -198,7 +198,74 @@
    <h4>📘 QuickBooks Full-Year Accounting Simulation (UAE VAT)</h4>
     
    <p>Simulated 12 months of business transactions for a UAE-based company in QuickBooks, including VAT filings, financial statements, and compliance reports.</p>
-   <img src="images/quickbooks-dashboard.png" alt="QuickBooks Accounting Simulation">
+   < alt="QuickBooks Accounting Simulation">
+     ### 📑 Reports (QuickBooks Simulation – 2025)
+      <div class="card">
+        <h4>📊 Balance Sheet</h4>
+        <p>Comprehensive balance sheet showing assets, liabilities, and equity positions.</p>
+        <a class="view-pdf" href="Reports/BalanceSheet%20(1).pdf" target="_blank">View PDF</a>
+        <img src="images/BalanceSheet-GL-2025.png" alt="Balance Sheet">
+    </div>
+
+    <div class="card">
+        <h4>💹 Profit & Loss Statement</h4>
+        <p>Detailed profit and loss report showing revenue, expenses, and net income.</p>
+        <a class="view-pdf" href="Reports/ProfitandLoss%20(1).pdf" target="_blank">View PDF</a>
+        <img src="images/PL-GL-2025.png" alt="Profit & Loss">
+    </div>
+
+    <div class="card">
+        <h4>💵 Cash Flow Statement</h4>
+        <p>Cash flow report detailing operational, investing, and financing cash activities.</p>
+        <a class="view-pdf" href="Reports/StatementofCashFlows.pdf" target="_blank">View PDF</a>
+        <img src="images/CF-GL-2025.png" alt="Cash Flow Statement">
+    </div>
+
+    <div class="card">
+        <h4>📋 Trial Balance</h4>
+        <p>Trial balance report summarizing all account balances at a specific point in time.</p>
+        <a class="view-pdf" href="Reports/TrialBalance%20(1).pdf" target="_blank">View PDF</a>
+        <img src="images/TrailBalance-GL-2025.png" alt="Trial Balance">
+    </div>
+
+    <div class="card">
+        <h4>🧾 Accounts Receivable Ageing</h4>
+        <p>Summary of outstanding customer balances and ageing analysis.</p>
+        <a class="view-pdf" href="Reports/A_RAgeingSummaryReport.pdf" target="_blank">View PDF</a>
+        <img src="images/AR%20Ageing-GL-2025.png" alt="Accounts Receivable Ageing">
+    </div>
+
+    <div class="card">
+        <h4>📌 Accounts Payable Ageing</h4>
+        <p>Summary of outstanding supplier balances and ageing analysis.</p>
+        <a class="view-pdf" href="Reports/A_PAgeingSummaryReport.pdf" target="_blank">View PDF</a>
+        <img src="images/AP%20Ageing-GL-2025.png" alt="Accounts Payable Ageing">
+    </div>
+
+    <div class="card">
+        <h4>👥 Customer Sales Summary</h4>
+        <p>Overview of sales per customer with total revenue and trends.</p>
+        <a class="view-pdf" href="Reports/SalesbyCustomerSummary.pdf" target="_blank">View PDF</a>
+        <img src="images/CustomerSummary-GL-2025.png" alt="Customer Sales Summary">
+    </div>
+
+    <div class="card">
+        <h4>🏢 Supplier Expense Summary</h4>
+        <p>Analysis of expenses per supplier showing total spending patterns.</p>
+        <a class="view-pdf" href="Reports/ExpensesbySupplierSummary.pdf" target="_blank">View PDF</a>
+        <img src="images/SupplierSummary-GL-2025.png" alt="Supplier Expense Summary">
+    </div>
+
+    <div class="card">
+        <h4>💸 VAT Detail Report</h4>
+        <p>Detailed report of VAT collected and paid across transactions.</p>
+        <a class="view-pdf" href="Reports/VATDetailReport.pdf" target="_blank">View PDF</a>
+        <img src="images/VATdetails-GL-2025.png" alt="VAT Detail Report">
+    </div>
+
+
+
+
 </div>
 
  <div class="card">
@@ -275,5 +342,6 @@
   <a href="#" class="top-button" title="Back to Top">↑</a>
 </body>
 </html>
+
 
 
