--- a/index.html
+++ b/index.html
@@ -198,11 +198,16 @@
     <div class="card">      
    <h4>📘 QuickBooks Full-Year Accounting Simulation (UAE VAT)</h4>
     
-   <p>Simulated 12 months of business transactions for a UAE-based company in QuickBooks, including VAT filings, financial statements, and compliance reports.</p>
-   < alt="QuickBooks Accounting Simulation">
-  <a href="Gulflink.html" target="_blank" style="display:inline-block; padding:0.6rem 1.2rem; background-color:#7c3aed; color:#fff; border-radius:20px; text-decoration:none; font-weight:600;">📸 View Project Screenshots</a>
-        <img src="images/BalanceSheet-GL-2025.png" alt="Balance Sheet Screenshot" style="max-width: 100%; height: auto; max-height: 500px;">
-   
+  <p>Simulated 12 months of business transactions for a UAE-based company in QuickBooks, including VAT filings, financial statements, and compliance reports.</p>
+
+<a href="Gulflink.html" target="_blank" 
+   style="display:inline-block; padding:0.6rem 1.2rem; background-color:#7c3aed; color:#fff; border-radius:20px; text-decoration:none; font-weight:600;">
+   📸 View Project Screenshots
+</a>
+
+<img src="images/BalanceSheet-GL-2025.png" alt="QuickBooks Accounting Simulation - Balance Sheet" 
+     style="max-width: 100%; height: auto; max-height: 500px;">
+
       
 
  <div class="card">
@@ -279,6 +284,7 @@
   <a href="#" class="top-button" title="Back to Top">↑</a>
 </body>
 </html>
+
 
 
 
