--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
    📸 View Project Screenshots
 </a>
 
-<img src="images/BalanceSheet-GL-2025.png" alt="QuickBooks Accounting Simulation - Balance Sheet" 
+<img src="images/PL-GL-2025.png" alt="QuickBooks Accounting Simulation - Profit and Loss Statement" 
      style="max-width: 100%; height: auto; max-height: 500px;">
 
       
@@ -284,6 +284,7 @@
   <a href="#" class="top-button" title="Back to Top">↑</a>
 </body>
 </html>
+
 
 
 
