--- a/Gulflink.html
+++ b/Gulflink.html
@@ -45,8 +45,14 @@
 <div class="card">
     <h4>📊 Balance Sheet</h4>
     <p>Comprehensive balance sheet showing assets, liabilities, and equity positions.</p>
-    <a class="view-pdf" href="Reports/BalanceSheet%20(1).pdf" target="_blank">📸 View Screenshots / PDF</a>
+    <a class="view-pdf" href="Reports/BalanceSheet%20(1).pdf" target="_blank" 
+       style="display:inline-block; padding:0.6rem 1.2rem; background-color:#7c3aed; color:#fff; border-radius:20px; text-decoration:none; font-weight:600;">
+       📸 View Screenshots / PDF
+    </a>
+    <img src="images/BalanceSheet-GL-2025.png" alt="Balance Sheet Screenshot" 
+         style="max-width: 100%; height: auto; max-height: 500px; margin-top: 10px; border-radius: 8px;">
 </div>
+
 
 <div class="card">
     <h4>💹 Profit & Loss Statement</h4>
