--- a/Gulflink.html
+++ b/Gulflink.html
@@ -57,50 +57,83 @@
 <div class="card">
     <h4>💹 Profit & Loss Statement</h4>
     <p>Detailed profit and loss report showing revenue, expenses, and net income.</p>
-    <a class="view-pdf" href="Reports/ProfitandLoss%20(1).pdf" target="_blank">📸 View Screenshots / PDF</a>
+    <a class="view-pdf" href="Reports/ProfitandLoss%20(1).pdf" target="_blank" 
+       style="display:inline-block; padding:0.6rem 1.2rem; background-color:#7c3aed; color:#fff; border-radius:20px; text-decoration:none; font-weight:600;">
+       📸 View Screenshots / PDF
+    </a>
+    <img src="images/PL-GL-2025.png" alt="Profit & Loss Screenshot" style="max-width: 100%; height: auto; max-height: 500px; margin-top: 10px; border-radius: 8px;">
 </div>
 
 <div class="card">
     <h4>💵 Cash Flow Statement</h4>
     <p>Cash flow report detailing operational, investing, and financing cash activities.</p>
-    <a class="view-pdf" href="Reports/StatementofCashFlows.pdf" target="_blank">📸 View Screenshots / PDF</a>
+    <a class="view-pdf" href="Reports/StatementofCashFlows.pdf" target="_blank" 
+       style="display:inline-block; padding:0.6rem 1.2rem; background-color:#7c3aed; color:#fff; border-radius:20px; text-decoration:none; font-weight:600;">
+       📸 View Screenshots / PDF
+    </a>
+    <img src="images/CF-GL-2025.png" alt="Cash Flow Screenshot" style="max-width: 100%; height: auto; max-height: 500px; margin-top: 10px; border-radius: 8px;">
 </div>
 
 <div class="card">
     <h4>📋 Trial Balance</h4>
     <p>Trial balance report summarizing all account balances at a specific point in time.</p>
-    <a class="view-pdf" href="Reports/TrialBalance%20(1).pdf" target="_blank">📸 View Screenshots / PDF</a>
+    <a class="view-pdf" href="Reports/TrialBalance%20(1).pdf" target="_blank" 
+       style="display:inline-block; padding:0.6rem 1.2rem; background-color:#7c3aed; color:#fff; border-radius:20px; text-decoration:none; font-weight:600;">
+       📸 View Screenshots / PDF
+    </a>
+    <img src="images/TrailBalance-GL-2025.png" alt="Trial Balance Screenshot" style="max-width: 100%; height: auto; max-height: 500px; margin-top: 10px; border-radius: 8px;">
 </div>
 
 <div class="card">
     <h4>🧾 Accounts Receivable Ageing</h4>
     <p>Summary of outstanding customer balances and ageing analysis.</p>
-    <a class="view-pdf" href="Reports/A_RAgeingSummaryReport.pdf" target="_blank">📸 View Screenshots / PDF</a>
+    <a class="view-pdf" href="Reports/A_RAgeingSummaryReport.pdf" target="_blank" 
+       style="display:inline-block; padding:0.6rem 1.2rem; background-color:#7c3aed; color:#fff; border-radius:20px; text-decoration:none; font-weight:600;">
+       📸 View Screenshots / PDF
+    </a>
+    <img src="images/AR%20Ageing-GL-2025.png" alt="Accounts Receivable Screenshot" style="max-width: 100%; height: auto; max-height: 500px; margin-top: 10px; border-radius: 8px;">
 </div>
 
 <div class="card">
     <h4>📌 Accounts Payable Ageing</h4>
     <p>Summary of outstanding supplier balances and ageing analysis.</p>
-    <a class="view-pdf" href="Reports/A_PAgeingSummaryReport.pdf" target="_blank">📸 View Screenshots / PDF</a>
+    <a class="view-pdf" href="Reports/A_PAgeingSummaryReport.pdf" target="_blank" 
+       style="display:inline-block; padding:0.6rem 1.2rem; background-color:#7c3aed; color:#fff; border-radius:20px; text-decoration:none; font-weight:600;">
+       📸 View Screenshots / PDF
+    </a>
+    <img src="images/AP%20Ageing-GL-2025.png" alt="Accounts Payable Screenshot" style="max-width: 100%; height: auto; max-height: 500px; margin-top: 10px; border-radius: 8px;">
 </div>
 
 <div class="card">
     <h4>👥 Customer Sales Summary</h4>
     <p>Overview of sales per customer with total revenue and trends.</p>
-    <a class="view-pdf" href="Reports/SalesbyCustomerSummary.pdf" target="_blank">📸 View Screenshots / PDF</a>
+    <a class="view-pdf" href="Reports/SalesbyCustomerSummary.pdf" target="_blank" 
+       style="display:inline-block; padding:0.6rem 1.2rem; background-color:#7c3aed; color:#fff; border-radius:20px; text-decoration:none; font-weight:600;">
+       📸 View Screenshots / PDF
+    </a>
+    <img src="images/CustomerSummary-GL-2025.png" alt="Customer Sales Screenshot" style="max-width: 100%; height: auto; max-height: 500px; margin-top: 10px; border-radius: 8px;">
 </div>
 
 <div class="card">
     <h4>🏢 Supplier Expense Summary</h4>
     <p>Analysis of expenses per supplier showing total spending patterns.</p>
-    <a class="view-pdf" href="Reports/ExpensesbySupplierSummary.pdf" target="_blank">📸 View Screenshots / PDF</a>
+    <a class="view-pdf" href="Reports/ExpensesbySupplierSummary.pdf" target="_blank" 
+       style="display:inline-block; padding:0.6rem 1.2rem; background-color:#7c3aed; color:#fff; border-radius:20px; text-decoration:none; font-weight:600;">
+       📸 View Screenshots / PDF
+    </a>
+    <img src="images/SupplierSummary-GL-2025.png" alt="Supplier Expense Screenshot" style="max-width: 100%; height: auto; max-height: 500px; margin-top: 10px; border-radius: 8px;">
 </div>
 
 <div class="card">
     <h4>💸 VAT Detail Report</h4>
     <p>Detailed report of VAT collected and paid across transactions.</p>
-    <a class="view-pdf" href="Reports/VATDetailReport.pdf" target="_blank">📸 View Screenshots / PDF</a>
+    <a class="view-pdf" href="Reports/VATDetailReport.pdf" target="_blank" 
+       style="display:inline-block; padding:0.6rem 1.2rem; background-color:#7c3aed; color:#fff; border-radius:20px; text-decoration:none; font-weight:600;">
+       📸 View Screenshots / PDF
+    </a>
+    <img src="images/VATdetails-GL-2025.png" alt="VAT Detail Screenshot" style="max-width: 100%; height: auto; max-height: 500px; margin-top: 10px; border-radius: 8px;">
 </div>
+
 
 </body>
 </html>
