--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
 
     <div class="buttons">
       <a href="#projects">📁 View Projects</a>
-     <a href="Ruthika Thorat - Accountant.pdf" download>📄 Download Resume</a>
+     <a href="Ruthika Thorat - Accountant2.pdf" download>📄 Download Resume</a>
     </div>
 
     <div class="socials">
@@ -284,6 +284,7 @@
   <a href="#" class="top-button" title="Back to Top">↑</a>
 </body>
 </html>
+
 
 
 
